# MPI_World_And_Sessions

./: .gitignore  README.md  env_config.sh
Basic_Session_Create/: sessions.c
MPI_Examples/: CMakeLists.txt
MPI_Examples/MalleableExample/: CMakeLists.txt  sessions.c
MPI_Examples/MinWorkingExample/: .sessions.c.swp  CMakeLists.txt  sessions.c  world.c
MPI_Examples/PingPongExample/: .sessions.c.swp  CMakeLists.txt  sessions.c  world.c
MPI_Examples/ProcToProcCommExample/: CMakeLists.txt  sessions.c  world.c
Presentation/: sessions_presentation.md
